--- a/index.html
+++ b/index.html
@@ -187,7 +187,7 @@ window.onclick = function(event) {
 
 <div class="title1">
 		<b>Прямой эфир телеканала</b><br>
-		<!-- <mark>Интернет-телеканал сейчас ничего не вещает</mark><br> -->
+		<mark>Интернет-телеканал сейчас ничего не вещает</mark><br>
 		<!-- <mark>Запись вещания:</mark> -->
 </div>
 <div class="video">
@@ -195,28 +195,35 @@ window.onclick = function(event) {
 
 </div>
 <div class="title1">
-		<b>Расписание на 16.10.2024</b>
-        <p>7:30 МСК:</p>
-        <p>- Неудачные дубли телепередачи "ВЕЛОМАРШРУТ"</p>
-        <p>С 7:32 МСК:</p>
+		<b>Расписание на 18.10.2024</b>
+        <p> 9:00 МСК:</p>
+        <p>"ВЕЛОМАРШРУТ" - Некрасовка, Косино-Ухтомский, Новокосино</p>
+        <p>9:20 МСК:</p>
+        <p>- "Импульс - шаг в будущее"</p>
+        <p>С 9:40 МСК:</p>
         <p>- Фильм "Чудеса случаются"</p>
         <p>- Короткометражный фильм "Страйдер"</p>
         <p>- Обзорная передача про игру в Roblox "Метро Москвы Некрасовка" - 2 серия.</p>
         <p>- Короткометражный фильм "СДЕЛКА".</p>
         <p>- Велопрогулка по Подмосковью - Люберцы</p>
+        <p>11:07 МСК:</p>
+        <p>- К/Ф "ЭГО"</p>
+        <p>11:30 МСК:</p>
+        <p>- К/Ф "Карачун"</p>
+        <p>14:05 МСК:</p>
+        <p>"ВЕЛОМАРШРУТ" - Некрасовка, Косино-Ухтомский, Новокосино</p>
+        <p>С 14:25 МСК:</p>
         <p>- "Импульс - шаг в будущее"</p>
         <p>- Короткометражный фильм "Беседа"</p>
         <p>- Короткометражный фильм "Скейт"</p>
-        <p>9:37 МСК:</p>
-        <p>- К/Ф "ЭГО"</p>
-        <p>10:00 МСК:</p>
-        <p>- К/Ф "Карачун"</p>
-        <p>10:25 МСК:</p>
+        <p>14:40 МСК:</p>
         <p>Продолжение вещания</p>
-        <p>15:35 МСК:</p>
-        <p>"ВЕЛОМАРШРУТ" - Некрасовка, Косино-Ухтомский, Новокосино</p>
         <p>15:55 МСК:</p>
-        <p>Продолжение вещания</p>
+        <p>"ВЕЛОМАРШРУТ" - Некрасовка, Косино-Ухтомский, Новокосино</p>
+        <p>17:00 МСК:</p>
+        <p>Там, где горы встречаются с морем <mark>По пятницам</mark></p>
+        <p>17:40 МСК:</p>
+        <p>Продолжение вещания</p></div>
 <!-- <div class="photo"><img src="/theme/images/Rpr29qovqzc.jpg"></div> -->
 <div class="Opros">
 	<!-- <iframe src="https://yandex.ru/chat#/join/0e0da34c-6352-4b74-8963-4b8d612868df/1717604674945027" width="850" height="478" allow="autoplay; encrypted-media; fullscreen; picture-in-picture;" frameborder="0" allowfullscreen></iframe> -->
