--- a/index.html
+++ b/index.html
@@ -195,35 +195,30 @@ window.onclick = function(event) {
 
 </div>
 <div class="title1">
-		<b>Расписание на 18.10.2024</b>
-        <p> 9:00 МСК:</p>
-        <p>"ВЕЛОМАРШРУТ" - Некрасовка, Косино-Ухтомский, Новокосино</p>
-        <p>9:20 МСК:</p>
-        <p>- "Импульс - шаг в будущее"</p>
-        <p>С 9:40 МСК:</p>
+		<b>Расписание на 19.10.2024</b>
+        <p>9:00 МСК:</p>
+        <p>- Неудачные дубли телепередачи "ВЕЛОМАРШРУТ"</p>
+        <p>9:02 МСК:</p>
+        <p>- "ВЕЛОМАРШРУТ" - Некрасовка, Косино-Ухтомский, Новокосино</p>
+        <p>С 9:20 МСК:</p>
         <p>- Фильм "Чудеса случаются"</p>
         <p>- Короткометражный фильм "Страйдер"</p>
         <p>- Обзорная передача про игру в Roblox "Метро Москвы Некрасовка" - 2 серия.</p>
         <p>- Короткометражный фильм "СДЕЛКА".</p>
         <p>- Велопрогулка по Подмосковью - Люберцы</p>
-        <p>11:07 МСК:</p>
-        <p>- К/Ф "ЭГО"</p>
-        <p>11:30 МСК:</p>
-        <p>- К/Ф "Карачун"</p>
-        <p>14:05 МСК:</p>
-        <p>"ВЕЛОМАРШРУТ" - Некрасовка, Косино-Ухтомский, Новокосино</p>
-        <p>С 14:25 МСК:</p>
         <p>- "Импульс - шаг в будущее"</p>
         <p>- Короткометражный фильм "Беседа"</p>
         <p>- Короткометражный фильм "Скейт"</p>
-        <p>14:40 МСК:</p>
+        <p>11:27 МСК:</p>
+        <p>- К/Ф "ЭГО"</p>
+        <p>11:50 МСК:</p>
+        <p>- К/Ф "Карачун"</p>
+        <p>12:15 МСК:</p>
         <p>Продолжение вещания</p>
-        <p>15:55 МСК:</p>
-        <p>"ВЕЛОМАРШРУТ" - Некрасовка, Косино-Ухтомский, Новокосино</p>
-        <p>17:00 МСК:</p>
-        <p>Там, где горы встречаются с морем <mark>По пятницам</mark></p>
-        <p>17:40 МСК:</p>
-        <p>Продолжение вещания</p></div>
+        <p>17:25 МСК:</p>
+        <p>- "ВЕЛОМАРШРУТ" - Некрасовка, Косино-Ухтомский, Новокосино</p>
+        <p>17:50 МСК:</p>
+        <p>Продолжение вещания</p>
 <!-- <div class="photo"><img src="/theme/images/Rpr29qovqzc.jpg"></div> -->
 <div class="Opros">
 	<!-- <iframe src="https://yandex.ru/chat#/join/0e0da34c-6352-4b74-8963-4b8d612868df/1717604674945027" width="850" height="478" allow="autoplay; encrypted-media; fullscreen; picture-in-picture;" frameborder="0" allowfullscreen></iframe> -->
