--- a/index.html
+++ b/index.html
@@ -195,12 +195,8 @@ window.onclick = function(event) {
 
 </div>
 <div class="title1">
-		<b>Расписание на 19.10.2024</b>
-        <p>9:00 МСК:</p>
-        <p>- Неудачные дубли телепередачи "ВЕЛОМАРШРУТ"</p>
-        <p>9:02 МСК:</p>
-        <p>- "ВЕЛОМАРШРУТ" - Некрасовка, Косино-Ухтомский, Новокосино</p>
-        <p>С 9:20 МСК:</p>
+		<b>Расписание на 20.10.2024</b>
+        <p>С 8:00 МСК:</p>
         <p>- Фильм "Чудеса случаются"</p>
         <p>- Короткометражный фильм "Страйдер"</p>
         <p>- Обзорная передача про игру в Roblox "Метро Москвы Некрасовка" - 2 серия.</p>
@@ -209,16 +205,18 @@ window.onclick = function(event) {
         <p>- "Импульс - шаг в будущее"</p>
         <p>- Короткометражный фильм "Беседа"</p>
         <p>- Короткометражный фильм "Скейт"</p>
-        <p>11:27 МСК:</p>
+        <p>10:07 МСК:</p>
         <p>- К/Ф "ЭГО"</p>
-        <p>11:50 МСК:</p>
+        <p>10:30 МСК:</p>
         <p>- К/Ф "Карачун"</p>
-        <p>12:15 МСК:</p>
+        <p>10:55 МСК:</p>
         <p>Продолжение вещания</p>
-        <p>17:25 МСК:</p>
-        <p>- "ВЕЛОМАРШРУТ" - Некрасовка, Косино-Ухтомский, Новокосино</p>
-        <p>17:50 МСК:</p>
-        <p>Продолжение вещания</p>
+        <p>13:45 МСК:</p>
+        <p>"ВЕЛОМАРШРУТ" - Некрасовка, Косино-Ухтомский, Новокосино</p>
+        <p>15:00 МСК:</p>
+        <p>Реальность полёта <mark>По воскресеньям</mark></p>
+        <p>15:40 МСК:</p>
+        <p>Продолжение вещания</p></div>
 <!-- <div class="photo"><img src="/theme/images/Rpr29qovqzc.jpg"></div> -->
 <div class="Opros">
 	<!-- <iframe src="https://yandex.ru/chat#/join/0e0da34c-6352-4b74-8963-4b8d612868df/1717604674945027" width="850" height="478" allow="autoplay; encrypted-media; fullscreen; picture-in-picture;" frameborder="0" allowfullscreen></iframe> -->
