--- a/livetv.html
+++ b/livetv.html
@@ -186,27 +186,29 @@ window.onclick = function(event) {
      </div>
      <div class="title1">
         <b>Расписание на 04.11.2024</b>
-        <p>10:00 МСК:</p>
+        <p>8:00 МСК:</p>
         <p>- Неудачные дубли телепередачи "ВЕЛОМАРШРУТ"</p>
-        <p>10:02 МСК:</p>
+        <p>8:02 МСК:</p>
         <p>- "ВЕЛОМАРШРУТ" - Некрасовка, Косино-Ухтомский, Новокосино</p>
-        <p>С 10:20 МСК:</p>
+        <p>С 8:20 МСК:</p>
         <p>- Фильм "Чудеса случаются"</p>
         <p>- Короткометражный фильм "Страйдер"</p>
         <p>- Велопрогулка по Подмосковью - Люберцы</p>
         <p>- "Импульс - шаг в будущее"</p>
         <p>- Короткометражный фильм "Беседа"</p>
         <p>- Короткометражный фильм "Скейт"</p>
-        <p>11:30 МСК:</p>
+        <p>9:30 МСК:</p>
         <p>- К/Ф "ЭГО"</p>
-        <p>11:50 МСК:</p>
+        <p>9:50 МСК:</p>
         <p>- "ВЕЛОМАРШРУТ" - Некрасовка, Косино-Ухтомский, Новокосино</p>
-        <p>12:10 МСК:</p>
+        <p>10:10 МСК:</p>
         <p>- К/Ф "Карачун"</p>
-        <p>12:15 МСК:</p>
+        <p>11:15 МСК:</p>
         <p>Продолжение вещания</p>
-        <p>23:00 МСК:</p>
+        <p>21:00 МСК:</p>
         <p>- "ВЕЛОМАРШРУТ" - Некрасовка, Косино-Ухтомский, Новокосино</p>
+        <p>16:50 МСК:</p>
+        <p>Продолжение вещания</p>
    </div>
 </div>
   </div><!-- /.entry-content -->
