--- a/index.html
+++ b/index.html
@@ -190,35 +190,35 @@ window.onclick = function(event) {
 
 </div>
 <div class="title1">
-		<b>Расписание на 07.12.2024</b>
-        <p>9:00 МСК:</p>
+		<b>Расписание на 08.12.2024</b>
+        <p>10:00 МСК:</p>
         <p>- Неудачные дубли телепередачи "ВЕЛОМАРШРУТ"</p>
-        <p>9:02 МСК:</p>
+        <p>10:02 МСК:</p>
         <p>- "ВЕЛОМАРШРУТ" - Некрасовка, Косино-Ухтомский, Новокосино</p>
-        <p>С 9:20 МСК:</p>
+        <p>С 10:20 МСК:</p>
         <p>- Фильм "Чудеса случаются"</p>
         <p>- Короткометражный фильм "Страйдер"</p>
-        <p>- Велопрогулка по Подмосковью - Люберцы</p>
+        <p>- Короткометражный фильм "Семейная связь"</p>
         <p>- "Импульс - шаг в будущее"</p>
         <p>- Короткометражный фильм "Беседа"</p>
         <p>- Короткометражный фильм "Скейт"</p>
-        <p>10:30 МСК:</p>
+        <p>11:30 МСК:</p>
         <p>- К/Ф "ЭГО"</p>
-        <p>10:50 МСК:</p>
+        <p>11:50 МСК:</p>
         <p>- "ВЕЛОМАРШРУТ" - Некрасовка, Косино-Ухтомский, Новокосино</p>
-        <p>11:10 МСК:</p>
+        <p>12:10 МСК:</p>
         <p>- К/Ф "Карачун"</p>
-        <p>12:00 МСК:</p>
-        <p>- ЗИМА на Райке and Лайке. Открытие</p>
-        <p>12:04 МСК:</p>
-        <p>"Импульс - шаг в будущее"</p>
-        <p>12:40 МСК:</p>
+        <p>13:15 МСК:</p>
         <p>Продолжение вещания</p>
-        <p>19:00 МСК:</p>
-        <p>- Короткометражный фильм "Семейная связь" <mark>ПРЕМЬЕРА!</mark></p>
-        <p>22:00 МСК:</p>
+        <p>18:15 МСК:</p>
+        <p>- Реальность полёта <mark>По воскресеньям</mark></p>
+        <p>18:51 МСК:</p>
+        <p>Продолжение вещания</p>
+        <p>22:10 МСК:</p>
         <p>- "ВЕЛОМАРШРУТ" - Некрасовка, Косино-Ухтомский, Новокосино</p>
-        <p>22:50 МСК:</p>
+        <p>22:30 МСК:</p>
+		<p>- Короткометражный фильм "Семейная связь"</p>
+		<p>22:45 МСК:</p>
         <p>Продолжение вещания</p>
 <!-- <div class="photo"><img src="/theme/images/Rpr29qovqzc.jpg"></div> -->
 <div class="Opros">
