--- a/index.html
+++ b/index.html
@@ -186,12 +186,14 @@ window.onclick = function(event) {
 
 </div>
 <div class="title1">
-		<b>Расписание на 26.02.2025</b>
+		<b>Расписание на 27.02.2025</b>
         <p>8:00 МСК:</p>
         <p>- Неудачные дубли телепередачи "ВЕЛОМАРШРУТ"</p>
         <p>8:02 МСК:</p>
         <p>- "ВЕЛОМАРШРУТ" - Некрасовка, Косино-Ухтомский, Новокосино</p>
-        <p>С 8:20 МСК:</p>
+        <p>8:20 МСК:</p>
+        <p>- К/ф "Черепаха"</p>
+        <p>С 8:45 МСК:</p>
         <p>- Фильм "Чудеса случаются"</p>
         <p>- Короткометражный фильм "Страйдер"</p>
         <p>- Короткометражный фильм "Семейная связь"</p>
@@ -204,22 +206,31 @@ window.onclick = function(event) {
         <p>- "ВЕЛОМАРШРУТ" - Некрасовка, Косино-Ухтомский, Новокосино</p>
         <p>10:50 МСК:</p>
         <p>- К/Ф "Карачун"</p>
-        <p>11:15 МСК:</p>
-        <p>Продолжение вещания</p>
-        <p>12:15 МСК:</p>
-        <p>- К/ф "Страйдер"</p>
-        <p>12:25 МСК:</p>
-        <p>- К/ф "Страйдер 2"</p>
-        <p>17:15 МСК:</p>
-        <p>- Реальность полёта <mark>По воскресеньям</mark></p>
-        <p>17:51 МСК:</p>
-        <p>Продолжение вещания</p>
-        <p>19:45 МСК:</p>
+        <p>С 11:15 МСК:</p>
+        <p>- Фильм "Чудеса случаются"</p>
+        <p>- Короткометражный фильм "Страйдер"</p>
+        <p>- Короткометражный фильм "Семейная связь"</p>
+        <p>- "Импульс - шаг в будущее"</p>
+        <p>- Короткометражный фильм "Беседа"</p>
+        <p>- Короткометражный фильм "Скейт"</p>
+        <p>13:50 МСК:</p>
         <p>- К/ф "Черепаха"</p>
-        <p>20:10 МСК:</p>
-        <p>Продолжение вещания</p>
-        <p>21:10 МСК:</p>
+        <p>15:55 МСК:</p>
+        <p>- К/Ф "ЭГО"</p>
+        <p>16:15 МСК:</p>
         <p>- "ВЕЛОМАРШРУТ" - Некрасовка, Косино-Ухтомский, Новокосино</p>
+        <p>16:35 МСК:</p>
+        <p>- К/Ф "Карачун"</p>
+        <p>17:00 МСК:</p>
+        <p>- К/ф "Черепаха"</p>
+        <p>С 17:25 МСК:</p>
+        <p>Продолжение вещания</p>
+        <p>21:55 МСК:</p>
+        <p>- "ВЕЛОМАРШРУТ" - Некрасовка, Косино-Ухтомский, Новокосино</p>
+        <p>22:15 МСК:</p>
+        <p>- Короткометражный фильм "Семейная связь"</p>
+        <p>С 22:30 МСК:</p>
+        <p>Продолжение вещания</p>
 
 
 <!-- <div class="photo"><img src="/theme/images/Rpr29qovqzc.jpg"></div> -->
