--- a/index.html
+++ b/index.html
@@ -186,33 +186,49 @@ window.onclick = function(event) {
 
 </div>
 <div class="title1">
-        <b>Расписание на 15.03.2025</b>
-        <p>10:00 МСК:</p>
+        <b>Расписание на 16.03.2025</b>
+        <p>9:00 МСК:</p>
         <p>- Неудачные дубли телепередачи "ВЕЛОМАРШРУТ"</p>
-        <p>10:02 МСК:</p>
+        <p>9:02 МСК:</p>
         <p>- "ВЕЛОМАРШРУТ" - Некрасовка, Косино-Ухтомский, Новокосино</p>
-        <p>С 10:20 МСК:</p>
+        <p>9:20 МСК:</p>
+        <p>- К/ф "Черепаха"</p>
+        <p>С 9:45 МСК:</p>
         <p>- Фильм "Чудеса случаются"</p>
         <p>- Короткометражный фильм "Страйдер"</p>
+        <p>- Короткометражный фильм "Семейная связь"</p>
         <p>- "Импульс - шаг в будущее"</p>
         <p>- Короткометражный фильм "Беседа"</p>
         <p>- Короткометражный фильм "Скейт"</p>
-        <p>11:45 МСК:</p>
+        <p>11:10 МСК:</p>
         <p>- К/Ф "ЭГО"</p>
-        <p>12:10 МСК:</p>
+        <p>11:35 МСК:</p>
         <p>- "ВЕЛОМАРШРУТ" - Некрасовка, Косино-Ухтомский, Новокосино</p>
-        <p>12:25 МСК:</p>
+        <p>11:50 МСК:</p>
         <p>- К/Ф "Карачун"</p>
-        <p>13:15 МСК:</p>
-        <p>Продолжение вещания</p>
-        <p>18:10 МСК:</p>
-        <p>- Там, где горы встречаются с морем <mark>По пятницам</mark></p>
-        <p>18:45 МСК:</p>
-        <p>Продолжение вещания</p>
-        <p>22:10 МСК:</p>
+        <p>С 12:15 МСК:</p>
+        <p>- Фильм "Чудеса случаются"</p>
+        <p>- Короткометражный фильм "Страйдер"</p>
+        <p>- Короткометражный фильм "Семейная связь"</p>
+        <p>- "Импульс - шаг в будущее"</p>
+        <p>- Короткометражный фильм "Беседа"</p>
+        <p>- Короткометражный фильм "Скейт"</p>
+        <p>14:50 МСК:</p>
+        <p>- К/ф "Черепаха"</p>
+        <p>16:55 МСК:</p>
+        <p>- К/Ф "ЭГО"</p>
+        <p>17:15 МСК:</p>
         <p>- "ВЕЛОМАРШРУТ" - Некрасовка, Косино-Ухтомский, Новокосино</p>
-        <p>22:25 МСК:</p>
+        <p>17:35 МСК:</p>
+        <p>- К/Ф "Карачун"</p>
+        <p>18:00 МСК:</p>
+        <p>- К/ф "Черепаха"</p>
+        <p>С 18:25 МСК:</p>
         <p>Продолжение вещания</p>
+        <p>22:55 МСК:</p>
+        <p>- "ВЕЛОМАРШРУТ" - Некрасовка, Косино-Ухтомский, Новокосино</p>
+        <p>23:15 МСК:</p>
+        <p>- Короткометражный фильм "Семейная связь"</p>
 
 
 
