--- a/index.html
+++ b/index.html
@@ -186,32 +186,36 @@ window.onclick = function(event) {
 
 </div>
 <div class="title1">
-        <b>Расписание на 26.03.2025</b>
-        <p>8:02 МСК:</p>
+        <b>Расписание на 27.03.2025</b>
+        <p><mark>Технический день</mark></p>
+        <b>Расписание на 28.03.2025</b>
+        <p>9:00 МСК:</p>
+        <p>- Неудачные дубли телепередачи "ВЕЛОМАРШРУТ"</p>
+        <p>9:02 МСК:</p>
         <p>- "ВЕЛОМАРШРУТ" - Некрасовка, Косино-Ухтомский, Новокосино</p>
-        <p>С 8:20 МСК:</p>
+        <p>С 9:20 МСК:</p>
         <p>- Фильм "Чудеса случаются"</p>
         <p>- Короткометражный фильм "Страйдер"</p>
         <p>- "Импульс - шаг в будущее"</p>
         <p>- Короткометражный фильм "Беседа"</p>
         <p>- Короткометражный фильм "Скейт"</p>
-        <p>9:45 МСК:</p>
+        <p>10:45 МСК:</p>
         <p>- К/Ф "ЭГО"</p>
-        <p>10:10 МСК:</p>
+        <p>11:10 МСК:</p>
         <p>- "ВЕЛОМАРШРУТ" - Некрасовка, Косино-Ухтомский, Новокосино</p>
-        <p>10:25 МСК:</p>
+        <p>11:25 МСК:</p>
         <p>- К/Ф "Карачун"</p>
-        <p>11:15 МСК:</p>
+        <p>12:15 МСК:</p>
         <p>Продолжение вещания</p>
-        <p>16:10 МСК:</p>
+        <p>17:10 МСК:</p>
         <p>- Там, где горы встречаются с морем</p>
-        <p>16:45 МСК:</p>
+        <p>17:45 МСК:</p>
         <p>Продолжение вещания</p>
-        <p>20:10 МСК:</p>
-        <p>Там, где горы встречаются с морем</p>
-        <p>20:45 МСК:</p>
-        <p>- "ВЕЛОМАРШРУТ" - Некрасовка, Косино-Ухтомский, Новокосино</p>
         <p>21:10 МСК:</p>
+        <p>Там, где горы встречаются с морем <mark>По пятницам</mark></p>
+        <p>21:45 МСК:</p>
+        <p>- "ВЕЛОМАРШРУТ" - Некрасовка, Косино-Ухтомский, Новокосино</p>
+        <p>22:10 МСК:</p>
         <p>Продолжение вещания</p>
 
 
